# servertools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  _auto_config.sh  common.sh  config.py  config.yaml  ppmgr.sh  push_changes.sh  pyproject.toml  requirements.txt  server_env_setup.sh  setup.cfg  setup.py  tox.ini  update_script.sh
api/: homeauto_api.py  homeauto_api.service  hosts_api.py  hosts_api.service  load_homeauto_api.sh  load_hosts_api.sh
api/homeauto/: homeauto_api.py  homeauto_api.service  load_homeauto_api.sh
api/hosts/: hosts.py  hosts_api.service  keys.py  main_api.py
api/motion-detect/: load_motion_detect.sh  main_api.py  motion-detect.service
api/passtagger/: load_hosts_api.sh  pass_api.py
api/passtagger/templates/: _form_helper.html  base.html  index.html  load.html  results.html
api/rf_temps/: load_rf_collect_service.sh  load_rf_stream_service.sh  rf_collect.py  rf_collect.service  rf_stream.py  rf_stream.service
crons/: homeserv.sh  lt-barrettp.sh  su-homeserv.sh  tinyserv.sh
development/: markov_test.py  server_env_setup.sh
documentation/: MQTT.md  NGINX.md  Openhab Tips.md  Philips Hue Tips.md  RF Temp Mons.md  Server Setup and Maintenance.md
scripts/: machine_connected.py  unknown_ip_monitor.py
scripts/camera/: amcrest_motion_alerts.py  amcrest_nighttime.py  amcrest_notify_zone.py  combine_timelapse.py  motion_alerts.py  motion_alerts_10m.py  reolink_motion_alerts.py  timelapse.py  timelapse_poster.py
scripts/finance/: stonks-ticker.py
scripts/grafana/: grafana.py
scripts/net/: apt_prices.py  ba-connection-tracker.py  machine-connected.py  machine_connected.py  speedtest-logger.py  unknown_ip_monitor.py
scripts/piholeinflux/: load_pihole_influx_service.sh  piholeinflux.py  piholeinflux.service
scripts/plants/: mushroom-grow-toggle.py
scripts/roku/: roku_toggle.py
scripts/slackbot/: emoji_scraper.py  memeraker.py  slack_logger.py  word-of-the-day.py
scripts/speedtest/: speedtest_logger.py
scripts/temps/: daily_weather_and_sig_temp_warn.py  darksky_weather.py  ecobee_temps.py  elutuba_temps.py  frost_warning.py  garage_temps.py  local_weather.py  porch_temps.py  severe_weather_check.py  significant_temp_change_warning.py
scripts/vpulse/: vpulse_auto.py
scripts/weather/: daily_weather_and_sig_temp_warn.py  ecobee_temps.py  forecast_collector.py  frost_warning.py  ha_temp_recorder.py  local_weather.py  moon_phase.py  plant_temp_warning.py  severe_weather_check.py
server-tools/: __init__.py  camera.py  database.py  message.py  openhab.py  roku.py  selenium.py  weather.py
servertools/: __init__.py  _version.py  camera.py  database.py  domoticz.py  ecobee.py  finance.py  gif.py  gsheets.py  homeassistant.py  hosts.py  keys.py  light.py  message.py  openhab.py  openwrt.py  plants.py  roku.py  secrets.py  selenium.py  slack_communicator.py  text.py  video.py  weather.py  ynab.py
servertools/weather/: __init__.py  nws.py  owm.py  slack.py  yrno.py
tests/: test-servertools.py  test_camera.py  test_finance.py  test_light.py  test_weather.py
