[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "servertools"
version = '2.1.0'
description = "A package for routines performed by my home automation server"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/servertools'
packages = [
    { include = 'servertools' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
kavalkilu = {git = "https://github.com/barretobrock/kavalkilu.git"}
slacktools = {git = "https://github.com/barretobrock/slacktools.git"}
reolink_api = {git = "https://github.com/barretobrock/reolink-python-api.git"}
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
Flask = "~2"
Pillow = "~9"
amcrest = "~1"
grafana-api = "~1"
imutils = "~0.5"
lxml = "~4"
markovify = "~0.9"
meteocalc = "~1"
moviepy = "~1"
nltk = "~3"
numpy = "~1.22"
opencv-python = "~4"
openwrt-luci-rpc = "~1"
pandas = "~1.4"
pylunar = "~0"
pyowm = "~3"
pysmb = "1.2.8"
python-dateutil = "~2"
python-yr = "~1"
requests = "~2"
selenium = "~4"
yahoofinancials = "~1"

[tool.poetry.dev-dependencies]
pre-commit = "~2"
pytest = "~7"
pytest-cov = "~3"
flake8 = "~4"
tox = "~3"

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']

[tool.poetry.extras]
test = ["pytest"]
